Perkin-UAT/force-app/main/default/objects/B2B_Support_Case__c/B2B_Support_Case__c.object-meta.xml
<CustomObject>
    <label>B2B Support Case</label>
    <nameField>
        <displayFormat>BSC0-{0000}</displayFormat>
        <label>B2B Support Case Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B2B Support Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>