Perkin-UAT/force-app/main/default/objects/B2B_Support_Case__c/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <label>Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>