Perkin-UAT/force-app/main/default/objects/B2B_Support_Case__c/fields/Order_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Order_Confirmation__c</fullName>
    <label>Order Confirmation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>