Perkin-UAT/force-app/main/default/objects/B2B_Support_Case__c/fields/Topic_you_need_help_with__c.field-meta.xml
<CustomField>
    <fullName>Topic_you_need_help_with__c</fullName>
    <label>Topic you need help with</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Website Support</fullName>
            </value>
            <value>
                <fullName>Account Set-Up</fullName>
            </value>
            <value>
                <fullName>Request Product/Service Information</fullName>
            </value>
            <value>
                <fullName>Request a Quote</fullName>
            </value>
            <value>
                <fullName>Existing Order Support</fullName>
            </value>
            <value>
                <fullName>Invoicing Support</fullName>
            </value>
            <value>
                <fullName>Credit/Order Holds Support</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>