Perkin-UAT/force-app/main/default/objects/B2B_Support_Case__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Purchase_Order__c</columns>
    <columns>Email_Address__c</columns>
    <columns>FirstName__c</columns>
    <columns>LastName__c</columns>
    <columns>Topic_you_need_help_with__c</columns>
    <columns>Product_Service__c</columns>
    <columns>Country__c</columns>
    <columns>Message_Long__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>